// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devices/components/moduleIdentityTwin snapshot matches snapshot when no device identity is provided 1`] = `
<CollapsibleSection
  expanded={false}
  label="deviceIdentity.authenticationType.sasToken.label"
  tooltipText="deviceIdentity.authenticationType.sasToken.toolTip"
>
  <div
    className="sas-token-section"
  >
    <StyledWithResponsiveMode
      className="sas-token-key-field"
      label="deviceIdentity.authenticationType.sasToken.symmetricKey"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": null,
            "text": "deviceIdentity.authenticationType.symmetricKey.primaryKey",
          },
          Object {
            "key": null,
            "text": "deviceIdentity.authenticationType.symmetricKey.secondaryKey",
          },
        ]
      }
      required={true}
    />
    <CustomizedSpinButton
      className="sas-token-expiration-field"
      decrementButtonIcon={
        Object {
          "iconName": "ChevronDownSmall",
        }
      }
      disabled={false}
      incrementButtonIcon={
        Object {
          "iconName": "ChevronUpSmall",
        }
      }
      label="deviceIdentity.authenticationType.sasToken.expiration"
      labelPosition={0}
      max={9007199254740991}
      min={0}
      onBlur={[Function]}
      onDecrement={[Function]}
      onIncrement={[Function]}
      step={1}
      value="5"
    />
    <Connect(MaskedCopyableTextField)
      allowMask={true}
      ariaLabel="deviceIdentity.authenticationType.sasToken.textField.ariaLabel"
      label="deviceIdentity.authenticationType.sasToken.textField.label"
      readOnly={true}
      value=""
    />
    <CustomizedPrimaryButton
      className="sas-token-generate-button"
      disabled={true}
      onClick={[Function]}
      text="deviceIdentity.authenticationType.sasToken.generateButton.text"
      title="deviceIdentity.authenticationType.sasToken.generateButton.title"
    />
  </div>
</CollapsibleSection>
`;

exports[`devices/components/moduleIdentityTwin snapshot matches snapshot when no device identity is provided 2`] = `
<CollapsibleSection
  expanded={false}
  label="deviceIdentity.authenticationType.sasToken.label"
  tooltipText="deviceIdentity.authenticationType.sasToken.toolTip"
>
  <div
    className="sas-token-section"
  >
    <StyledWithResponsiveMode
      className="sas-token-key-field"
      label="deviceIdentity.authenticationType.sasToken.symmetricKey"
      onChange={[Function]}
      options={
        Array [
          Object {
            "key": "key1",
            "text": "deviceIdentity.authenticationType.symmetricKey.primaryKey",
          },
          Object {
            "key": "key2",
            "text": "deviceIdentity.authenticationType.symmetricKey.secondaryKey",
          },
        ]
      }
      required={true}
    />
    <CustomizedSpinButton
      className="sas-token-expiration-field"
      decrementButtonIcon={
        Object {
          "iconName": "ChevronDownSmall",
        }
      }
      disabled={false}
      incrementButtonIcon={
        Object {
          "iconName": "ChevronUpSmall",
        }
      }
      label="deviceIdentity.authenticationType.sasToken.expiration"
      labelPosition={0}
      max={9007199254740991}
      min={0}
      onBlur={[Function]}
      onDecrement={[Function]}
      onIncrement={[Function]}
      step={1}
      value="5"
    />
    <Connect(MaskedCopyableTextField)
      allowMask={true}
      ariaLabel="deviceIdentity.authenticationType.sasToken.textField.ariaLabel"
      label="deviceIdentity.authenticationType.sasToken.textField.label"
      readOnly={true}
      value=""
    />
    <CustomizedPrimaryButton
      className="sas-token-generate-button"
      disabled={true}
      onClick={[Function]}
      text="deviceIdentity.authenticationType.sasToken.generateButton.text"
      title="deviceIdentity.authenticationType.sasToken.generateButton.title"
    />
  </div>
</CollapsibleSection>
`;
